src/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street_Address__c + &quot;, &quot; + City__c + &quot;, &quot; + State__c + &quot; &quot; + Zip_Code__c + &quot; &quot; + Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Enter the state abbreviation (e.g. &quot;IL&quot;).</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <recordTypes>
        <fullName>Member_Record_Type</fullName>
        <active>true</active>
        <label>Member Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organizer_Record_Type</fullName>
        <active>true</active>
        <label>Organizer Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>